# ex_server-ctrl-client_c

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  main.c
inc/: client.h  common.h  config.h  server.h
src/: client.c  main.c  server.c  srvc_client.c  srvc_controller.c  srvc_server.c
test/integration_c/: test_int_base.cpp
test/unit_c/: test_unit_base.cpp
